--- a/app/views/steps/index.html.erb
+++ b/app/views/steps/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Steps#index</h1>
 <p>Find me in app/views/steps/index.html.erb</p>
+<%= javascript_include_tag "step_hierarchy" %>
 <script>
   window.step_data = <%= @steps.map { |step| step.amount } || [] %>
 </script>
