--- a/app/views/steps/index.html.erb
+++ b/app/views/steps/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Steps#index</h1>
 <p>Find me in app/views/steps/index.html.erb</p>
-<%= javascript_include_tag "step_hierarchy" %>
 <script>
-  window.step_data = <%= @steps.map { |step| step.amount } || [] %>
+  window.stepData = <%= @jsonData.html_safe %>
 </script>
+<%= javascript_include_tag "step_hierarchy" %>
+
 <table class="table table-bordered">
   <thead>
     <tr>
@@ -13,12 +14,12 @@
     </tr>
   </thead>
   <tbody>
-  <% @steps.each do |step| %>
+  <%# @steps.each do |step| %>
     <tr>
-      <td><%= step.start_time %></td>
-      <td><%= step.end_time %></td>
-      <td><%= step.amount %></td>
+      <td><%#= step.start_time %></td>
+      <td><%#= step.end_time %></td>
+      <td><%#= step.amount %></td>
     </tr>  
-  <% end %>
+  <% #end %>
   </tbody>
 </table>
